fix some layout issues

--- a/app/components/NewTabContent/NewTabContent.styl
+++ b/app/components/NewTabContent/NewTabContent.styl
@@ -31,7 +31,7 @@
             button
                 button()
                 background: white
-                font-family: var(--font-mono)
+                font-family: var(--font-mont)
                 width: 100%
                 height: 100%
                 border 1px solid var(--color-grey)
@@ -41,10 +41,14 @@
                 h3
                     font-weight: bold
                     font-size: 18px
-                    margin-bottom: 0
-                    padding-bottom: 0
+                    margin: 0
+                    padding: 0
                 h4
                     margin-top: 0
+                    font-size: 12px
+                    max-width: 100%
+                    white-space: normal
+                    line-height: normal
         .action-container.is-active
             button
                 color: var(--color-white)
@@ -85,7 +89,7 @@
             button
                 button('active')
                 padding: 5px 10px
-                font-family: var(--font-mono)
+                font-family: var(--font-mont)
                 margin-left: 5px
                 min-width: 70px
                 cursor: pointer
