--- a/app/containers/BrowserTabsContainer/BrowserTabContent.styl
+++ b/app/containers/BrowserTabsContainer/BrowserTabContent.styl
@@ -2,6 +2,8 @@
   display: flex;
   flex-direction: column;
   flex: 1;
+  outline: none
+
 
   webview {
     flex-grow: 1;
