--- a/app/containers/BrowserTabsContainer/BrowserTabsContainer.styl
+++ b/app/containers/BrowserTabsContainer/BrowserTabsContainer.styl
@@ -1,7 +1,11 @@
+.browser-tabs-container
+  height: 100%
+  display: flex
+  flex-flow: column nowrap
+  justify-content: stretch
 .browser-tabs {
   display: flex;
   flex-direction: column;
-  flex: 1;
 
   > .browser-tab-labels {
     overflow: hidden;
